force-app/main/default/objects/Loopio__Go_No_Go_Answer__c/Loopio__Go_No_Go_Answer__c.object-meta.xml
<CustomObject>
    <description>This object stores Go/No-Go Score as well as Go/No-Go Status for answers given by the user.</description>
    <label>[deprecated] Go/No-Go Submission</label>
    <nameField>
        <displayFormat>GNGA-{0000}</displayFormat>
        <label>[deprecated] Go/No-Go Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>[deprecated] Go/No-Go Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>