force-app/main/default/objects/Loopio__Go_No_Go_Answer__c/fields/Loopio__Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be used if Go/No-Go Score is below threshold value and need an approval from higher authority users.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>