force-app/main/default/objects/Loopio__Go_No_Go_Answer__c/fields/Loopio__Approved__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used once we have to allow users to create a Loopio project from Go/No-Go Answer record if Approval Required is true.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>