force-app/main/default/objects/Loopio__Go_No_Go_Answer__c/fields/Loopio__Go_No_Go_Status__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Go_No_Go_Status__c</fullName>
    <description>Stores the Go/No-Go Status.</description>
    <formula>IMAGE(&quot;/resource/&quot; +  Loopio__Static_Resource_Name__c , &quot;Status&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>