force-app/main/default/objects/Loopio__Go_No_Go_Answer__c/fields/Loopio__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Loopio__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Go_No_Go_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>