force-app/main/default/objects/Loopio__Go_No_Go_Answer__c/listViews/Loopio__All.listView-meta.xml
<ListView>
    <fullName>Loopio__All</fullName>
    <columns>NAME</columns>
    <columns>Loopio__Go_No_Go_Score__c</columns>
    <columns>Loopio__Go_No_Go_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Loopio__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>